# mabuc

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
examples/: mabuc_example.ipynb
examples/.ipynb_checkpoints/: mabuc_example-checkpoint.ipynb
src/mabuc/: Blbfuc.py  __init__.py  mabuc.py
tests/: test_mabuc.py
