[tool.poetry]
name = "mabuc"
version = "0.0.1"
description = "Multi-arm bandits with unobserved confounders"
authors = ["Leo Guelman"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
